--- a/produtos/templates/produto/produto.html
+++ b/produtos/templates/produto/produto.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 <div class="offset-1 col-10 list-div">
-    <h1>{{prduto.name}}</h1>
+    <h1>{{prduto.nome}}</h1>
     <p>{{produto.descricao}}</p>
     <h2>{{produto.quantidade}}</h2>
 </div>
