--- a/produtos/static/css/styles.css
+++ b/produtos/static/css/styles.css
@@ -128,11 +128,11 @@
     padding: 0;
 }
 
-.task-list {
+.produto-list {
     padding-left: 0;
 }
 
-.task-item {
+.produto-item {
     list-style: none;
     font-size: 20px;
     height: 50px;
@@ -208,7 +208,7 @@ ul.messages li {
     margin-right: auto;
 }
 
-.step-links .current {
+.step-links .current-page {
     margin-left: 5px;
     margin-right: 5px;
 }
