--- a/produtos/templates/produto/ListaProd.html
+++ b/produtos/templates/produto/ListaProd.html
@@ -26,13 +26,30 @@
     </ul>
     {% endif %}
     <ul class="produto-list">
-        {% for produto in produtos %}
+        {% for produtos in produto %}
             <li class = "produto-item">
-                <span><a href="/produto/{{produto.id}}">{{produto.nome}}</a></span>
-                <a href="delete/{{produto.id}}" class="delete-btn"><span><i class="fas fa-trash"></i></span></a>
-                <a href="edit/{{produto.id}}"><span><i class="fas fa-edit"></i></span></a>
+                <span><a href="/produto/{{produtos.id}}">{{produtos.nome}}</a></span>
+                <a href="delete/{{produtos.id}}" class="delete-btn"><span><i class="fas fa-trash"></i></span></a>
+                <a href="edit/{{produtos.id}}"><span><i class="fas fa-edit"></i></span></a>
             </li>
         {% endfor %}
+    </div>
+    <div class="pagination">
+        <span class="step-links">
+            {% if prdotuoss.has_previous %}
+                <a href="?page={{ produtos.previous_page_number }}"><i class="fas fa-arrow-left"></i></a>
+            {% endif %}
+            
+            {% if produtos.paginator.num_pages %}
+            <span class="current">
+                {{ produtos.number }} de {{ produtos.paginator.num_pages }}
+            </span>
+            {% endif %}
+        
+            {% if produtos.has_next %}
+                <a href="?page={{ produtos.next_page_number }}"><i class="fas fa-arrow-right"></i></a>
+            {% endif %}
+        </span>
     </div>
 </div>
 {% endblock %}
