--- a/produtos/static/css/styles.css
+++ b/produtos/static/css/styles.css
@@ -1,3 +1,5 @@
+
+
 .container-fluid {
     padding: 0;
 }
@@ -217,9 +219,17 @@ ul.messages li {
 
 .auth-card {
     margin-bottom: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column
 }
+
+
+   
 
 .change-form-p {
     margin-top: 30px;
     text-align: center;
 }
+
