--- a/produtos/templates/produto/addproduto.html
+++ b/produtos/templates/produto/addproduto.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
-
+{%load crispy_forms_tags%}
 {% block title %}Adicione um Produto{% endblock %}
 {%block content%}
 <div class = "offset-1 col-10 list-div">
     <h1> Adicionar Produto: </h1>
     <form method="POST">
         {%csrf_token%}
-        {{form.as_p}}
+        {{form|crispy}}
         <input type ="submit" class = "btn btn-success" value ="Criar Produto" />
     </form>
 </div>
