--- a/produtos/templates/produto/editproduto.html
+++ b/produtos/templates/produto/editproduto.html
@@ -1,12 +1,13 @@
 {% extends 'base.html' %}
-
+{%load crispy_forms_tags%}
+{% load static %}
 {% block title %}Editando '{{produto.nome}}'{% endblock %}
 {%block content%}
 <div class = "offset-1 col-10 list-div">
     <h1> Editando '{{produto.nome}}' : </h1>
     <form method="POST">
         {%csrf_token%}
-        {{form.as_p}}
+        {{form|crispy}}
         <input type ="submit" class = "btn btn-success" value ="Editar Produto" />
     </form>
 </div>
