Adicionado Login e Logout

--- a/produtos/templates/base.html
+++ b/produtos/templates/base.html
@@ -5,10 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{% block title %}Loja Do Maestro{% endblock %}</title>
-    <link rel = "icon" href ="{% static 'css/images/69d6d97c-eca7-496b-a12a-fec41f0eeb42.ico' %}"> 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <title>{% block title %}{% endblock %}</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
@@ -26,16 +24,13 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/">Produtos</a>
                     </li>
-                    <li class="nav-item">
-                            <a class="nav-link" href="#">Usuários</a>
-                        </li>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="/accounts/login">Entrar</a>
                     </li>
                     {% endif %}
                     <li class="nav-item">
-                        <a class="nav-link" href="/sobrenos">Sobre nós</a>
+                        <a class="nav-link" href="sobrenos/">Sobre nós</a>
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
@@ -47,15 +42,13 @@
         </nav>
         {% block content %}
         {% endblock %}
-        
+       
     </div>
     <script
     src="https://code.jquery.com/jquery-3.4.0.min.js"
     integrity="sha256-BJeo0qm959uMBGb65z40ejJYGSgR7REI4+CW1fNKwOg="
     crossorigin="anonymous"></script>
-    
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
     <script src="{% static 'js/scripts.js' %}"></script>
 </body>
 </html>
