--- a/produtos/templates/produto/ListaProd.html
+++ b/produtos/templates/produto/ListaProd.html
@@ -13,7 +13,7 @@
     </a>
     <div class="col-9 search-div">
         <form method="GET" id="search-form">
-            <input class="form-control" type="text" id="search" name="search" placeholder="Digite o nome do produto para buscar..." value="{{ request.GET.search }}">
+            <input class="form-control" type="text" id="search" name="search" placeholder="Digite o nome da tarefa para buscar..." value="{{ request.GET.search }}">
             <i class="fas fa-search" id="search-btn"></i>
         </form>
     </div>
